<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sortament.SelectForm">

    <!-- Заголовок -->
    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="0dp"
        android:layout_height="80sp"
        android:background="@color/primary"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/unbounded"
        android:gravity="center"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Квадрат -->
    <LinearLayout
        android:id="@+id/Square"
        style="@style/SelectFormLayout"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/Circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeader">

        <ImageButton
            style="@style/SelectFormImage"
            android:contentDescription="@string/squareProfile"
            android:onClick="btnProfile"
            app:srcCompat="@drawable/kvadrat_m"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textViewSquare"
            style="@style/SelectFormCardText"
            android:layout_gravity="center"
            android:text="@string/Profile" />
    </LinearLayout>

    <!-- Круг -->
    <LinearLayout
        android:id="@+id/Circle"
        style="@style/SelectFormLayout"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/List"
        app:layout_constraintStart_toEndOf="@+id/Square"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeader">

        <ImageButton
            style="@style/SelectFormImage"
            android:contentDescription="@string/circle"
            android:hapticFeedbackEnabled="true"
            android:onClick="btnCircleCalculate"
            app:srcCompat="@drawable/circle_m"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            style="@style/SelectFormCardText"
            android:text="@string/circle" />
    </LinearLayout>

    <!-- Лист -->
    <LinearLayout
        android:id="@+id/List"
        style="@style/SelectFormLayout"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Circle"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeader">

        <ImageButton
            style="@style/SelectFormImage"
            android:contentDescription="@string/list"
            android:onClick="btnListCalculate"
            app:srcCompat="@drawable/list_m"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textViewList"
            style="@style/SelectFormCardText"
            android:text="@string/list" />
    </LinearLayout>

    <!-- Профильная труба -->
    <LinearLayout
        android:id="@+id/ProfilePipe"
        style="@style/SelectFormLayout"
        app:layout_constraintEnd_toStartOf="@+id/CirclePipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Square">

        <ImageButton
            style="@style/SelectFormImage"
            android:contentDescription="@string/profilePipe"
            android:onClick="btnProfilePipeCalculate"
            app:srcCompat="@drawable/porf_truba_m"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <TextView
            style="@style/SelectFormCardText"
            android:text="@string/profilePipe" />
    </LinearLayout>

    <!-- Круглая труба -->
    <LinearLayout
        android:id="@+id/CirclePipe"
        style="@style/SelectFormLayout"
        app:layout_constraintEnd_toStartOf="@+id/Ugolok"
        app:layout_constraintStart_toEndOf="@+id/ProfilePipe"
        app:layout_constraintTop_toBottomOf="@+id/Circle">

        <ImageButton
            style="@style/SelectFormImage"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/circlePipe"
            android:onClick="btnCirclePipeCalculate"
            app:srcCompat="@drawable/circle_truba_m"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textViewCirclePipe"
            style="@style/SelectFormCardText"
            android:text="@string/circlePipe" />
    </LinearLayout>

    <!-- Уголок -->
    <LinearLayout
        android:id="@+id/Ugolok"
        style="@style/SelectFormLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CirclePipe"
        app:layout_constraintTop_toBottomOf="@+id/List">

        <ImageButton
            style="@style/SelectFormImage"
            android:contentDescription="@string/corner"
            android:onClick="btnCornerCalculate"
            app:srcCompat="@drawable/ugolok_m"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <TextView
            style="@style/SelectFormCardText"
            android:text="@string/ugolok" />
    </LinearLayout>

    <!-- Двутавр -->
    <LinearLayout
        android:id="@+id/Dvutavr"
        style="@style/SelectFormLayout"
        app:layout_constraintEnd_toStartOf="@+id/Shveller"
        app:layout_constraintStart_toStartOf="@+id/ProfilePipe"
        app:layout_constraintTop_toBottomOf="@+id/ProfilePipe">

        <ImageButton
            style="@style/SelectFormImage"
            android:onClick="btnDvutavr"
            android:contentDescription="@string/dvutavr"
            app:srcCompat="@drawable/dvutavr_m"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            style="@style/SelectFormCardText"
            android:text="@string/dvutavr" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/Shveller"
        style="@style/SelectFormLayout"

        app:layout_constraintEnd_toStartOf="@+id/Shestigrannik"
        app:layout_constraintStart_toEndOf="@+id/Dvutavr"
        app:layout_constraintTop_toBottomOf="@+id/ProfilePipe">

        <ImageButton
            style="@style/SelectFormImage"
            android:contentDescription="@string/shveller"
            app:srcCompat="@drawable/shveller_m"
            android:onClick="btnShveller"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            style="@style/SelectFormCardText"
            android:text="@string/shveller" />


    </LinearLayout>

    <!-- Шестигранник  -->
    <LinearLayout
        android:id="@+id/Shestigrannik"
        style="@style/SelectFormLayout"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Shveller"
        app:layout_constraintTop_toTopOf="@+id/Shveller">

        <ImageButton
            style="@style/SelectFormImage"
            android:contentDescription="@string/shestigrannik"
            android:onClick="btnShestigrannikCalculate"
            app:srcCompat="@drawable/shestigr_m"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            style="@style/SelectFormCardText"
            android:text="@string/shestigrannik" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/Armatura"
        style="@style/SelectFormLayout"
        app:layout_constraintEnd_toEndOf="@+id/Dvutavr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Shveller">

        <ImageButton
            style="@style/SelectFormImage"
            android:contentDescription="@string/armatura"
            app:srcCompat="@drawable/armatura_gost"
            android:onClick="btnArmatura"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <TextView
            style="@style/SelectFormCardText"
            android:text="@string/armatura" />

        <TextView
            style="@style/SelectFormCardText"
            android:layout_marginTop="2sp"
            android:backgroundTint="#FF0000"
            android:text="@string/New"
            android:textSize="7sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>