<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="Control.MainMenu">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="833dp" />



    <ImageView
        android:id="@+id/img_language"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/language"
        android:onClick="showLanguageDialog"
        android:src="@drawable/ic_language_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />

    <LinearLayout
        android:id="@+id/logoBoxMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_language">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_logofav" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"

        style="@style/MainHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/version"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/logoBoxMain"
        app:layout_constraintEnd_toEndOf="@+id/logoBoxMain" />

</LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoBoxMain">

        <Button
            android:id="@+id/btnSelectForm"
            style="@style/MainMenuButton"


            android:layout_marginBottom="10dp"
            android:hapticFeedbackEnabled="true"
            android:onClick="btnCalculateMetal"
            android:text="@string/calculateMetall" />

        <Button
            android:id="@+id/btnGosts"
            style="@style/MainMenuButton"


            android:layout_marginBottom="10dp"
            android:hapticFeedbackEnabled="true"
            android:onClick="btnListGosts"
            android:text="@string/list_of_standarts" />

        <TextView
            style="@style/BaseText"
            android:layout_width="match_parent"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:text="@string/inDevelop" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/orange" />

        <Button
            android:id="@+id/btnWeldingSeams"
            style="@style/MainMenuButtonInDevelop"


            android:layout_marginTop="20dp"
            android:hapticFeedbackEnabled="true"
            android:onClick="btnWeldingSeams"
            android:text="@string/weldingSeams" />

        <Button
            android:id="@+id/btnBeam"
            style="@style/MainMenuButtonInDevelop"


            android:layout_marginTop="10dp"
            android:hapticFeedbackEnabled="true"
            android:onClick="btnBeamMenu"
            android:text="@string/deflectionBeamCalculate" />
    </LinearLayout>


    <!-- Кнопка сообщить об ошибке с безопасным отступом -->
    <Button
        android:id="@+id/btn_report_error"
        style="@style/Density"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"


        android:paddingBottom="@dimen/nav_bar_height"
        android:text="@string/report_error"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>